--- a/public/access/mijia/index.print.html
+++ b/public/access/mijia/index.print.html
@@ -35,18 +35,18 @@
     <link href="http://localhost:1313/access/mijia/index.html" rel="canonical" type="text/html" title="将米家设备接入HomeAssistant :: HaBox 技术支持站">
     <link href="../../access/mijia/index.xml" rel="alternate" type="application/rss+xml" title="将米家设备接入HomeAssistant :: HaBox 技术支持站"><link rel="icon" href="../../images/favicon.png" type="image/png">
 
-    <link href="../../css/fontawesome-all.min.css?1725802923" rel="stylesheet" media="print" onload="this.media='all';this.onload=null;"><noscript><link href="../../css/fontawesome-all.min.css?1725802923" rel="stylesheet"></noscript>
-    <link href="../../css/nucleus.css?1725802923" rel="stylesheet">
-    <link href="../../css/auto-complete.css?1725802923" rel="stylesheet" media="print" onload="this.media='all';this.onload=null;"><noscript><link href="../../css/auto-complete.css?1725802923" rel="stylesheet"></noscript>
-    <link href="../../css/perfect-scrollbar.min.css?1725802923" rel="stylesheet">
-    <link href="../../css/fonts.css?1725802923" rel="stylesheet" media="print" onload="this.media='all';this.onload=null;"><noscript><link href="../../css/fonts.css?1725802923" rel="stylesheet"></noscript>
-    <link href="../../css/theme.css?1725802923" rel="stylesheet">
-    <link href="../../css/theme-relearn-auto.css?1725802923" rel="stylesheet" id="R-variant-style">
-    <link href="../../css/chroma-relearn-auto.css?1725802923" rel="stylesheet" id="R-variant-chroma-style">
-    <link href="../../css/variant.css?1725802923" rel="stylesheet">
-    <link href="../../css/print.css?1725802923" rel="stylesheet" media="print">
-    <link href="../../css/format-print.css?1725802923" rel="stylesheet">
-    <script src="../../js/variant.js?1725802923"></script>
+    <link href="../../css/fontawesome-all.min.css?1725846757" rel="stylesheet" media="print" onload="this.media='all';this.onload=null;"><noscript><link href="../../css/fontawesome-all.min.css?1725846757" rel="stylesheet"></noscript>
+    <link href="../../css/nucleus.css?1725846757" rel="stylesheet">
+    <link href="../../css/auto-complete.css?1725846757" rel="stylesheet" media="print" onload="this.media='all';this.onload=null;"><noscript><link href="../../css/auto-complete.css?1725846757" rel="stylesheet"></noscript>
+    <link href="../../css/perfect-scrollbar.min.css?1725846757" rel="stylesheet">
+    <link href="../../css/fonts.css?1725846757" rel="stylesheet" media="print" onload="this.media='all';this.onload=null;"><noscript><link href="../../css/fonts.css?1725846757" rel="stylesheet"></noscript>
+    <link href="../../css/theme.css?1725846757" rel="stylesheet">
+    <link href="../../css/theme-relearn-auto.css?1725846757" rel="stylesheet" id="R-variant-style">
+    <link href="../../css/chroma-relearn-auto.css?1725846757" rel="stylesheet" id="R-variant-chroma-style">
+    <link href="../../css/variant.css?1725846757" rel="stylesheet">
+    <link href="../../css/print.css?1725846757" rel="stylesheet" media="print">
+    <link href="../../css/format-print.css?1725846757" rel="stylesheet">
+    <script src="../../js/variant.js?1725846757"></script>
     <script>
       window.relearn = window.relearn || {};
       window.relearn.relBasePath='..\/..';
@@ -79,13 +79,13 @@
             </div>
           </div>
           <ol class="topbar-breadcrumbs breadcrumbs highlightable" itemscope itemtype="http://schema.org/BreadcrumbList"><li
-            itemscope itemtype="https://schema.org/ListItem" itemprop="itemListElement"><a itemprop="item" href="../../access/index.html"><span itemprop="name">设备接入</span></a><meta itemprop="position" content="1">&nbsp;>&nbsp;</li><li
+            itemscope itemtype="https://schema.org/ListItem" itemprop="itemListElement"><a itemprop="item" href="../../access/index.html"><span itemprop="name">2 设备接入</span></a><meta itemprop="position" content="1">&nbsp;>&nbsp;</li><li
             itemscope itemtype="https://schema.org/ListItem" itemprop="itemListElement"><span itemprop="name">将米家设备接入HomeAssistant</span><meta itemprop="position" content="2"></li>
           </ol>
           <div class="topbar-area topbar-area-end" data-area="end">
             <div class="topbar-button topbar-button-prev" data-content-empty="disable" data-width-s="show" data-width-m="show" data-width-l="show"><a class="topbar-control" href="../../access/homekit/index.html" title="HA Box桥接米家设备到HomeKit (🡐)"><i class="fa-fw fas fa-chevron-left"></i></a>
             </div>
-            <div class="topbar-button topbar-button-next" data-content-empty="disable" data-width-s="show" data-width-m="show" data-width-l="show"><a class="topbar-control" href="../../network/index.html" title="网络技术 (🡒)"><i class="fa-fw fas fa-chevron-right"></i></a>
+            <div class="topbar-button topbar-button-next" data-content-empty="disable" data-width-s="show" data-width-m="show" data-width-l="show"><a class="topbar-control" href="../../automatic-control/index.html" title="3 智能控制 (🡒)"><i class="fa-fw fas fa-chevron-right"></i></a>
             </div>
           </div>
         </div>
@@ -113,16 +113,16 @@
 <h3 id="1-安装-xiaomi-miot-atuo">1 安装 Xiaomi Miot Atuo</h3>
 <p>接下来，我们需要安装 “Xiaomi Miot Atuo” 集成以将米家设备接入HomeAssistant。</p>
 <p>进入 HACS 页面，清除筛选方式（默认只显示已下载的）</p>
-<p><a href="#R-image-7658bb7be34fcaa65750cc8a46cf3262" class="lightbox-link"><img alt="image" class="noborder lazy lightbox noshadow figure-image" loading="lazy" src="https://pic.456766.xyz/typora/70e2335f30d0ac09481483ab161fd31c8ccdae7d.jpeg" style=" height: auto; width: auto;"></a>
-<a href="javascript:history.back();" class="lightbox-back" id="R-image-7658bb7be34fcaa65750cc8a46cf3262"><img alt="image" class="noborder lazy lightbox noshadow lightbox-image" loading="lazy" src="https://pic.456766.xyz/typora/70e2335f30d0ac09481483ab161fd31c8ccdae7d.jpeg"></a></p>
+<p><a href="#R-image-6ddf9782ee483d8396dd4224339e6129" class="lightbox-link"><img alt="image" class="noborder lazy lightbox noshadow figure-image" loading="lazy" src="https://pic.456766.xyz/typora/70e2335f30d0ac09481483ab161fd31c8ccdae7d.jpeg" style=" height: auto; width: auto;"></a>
+<a href="javascript:history.back();" class="lightbox-back" id="R-image-6ddf9782ee483d8396dd4224339e6129"><img alt="image" class="noborder lazy lightbox noshadow lightbox-image" loading="lazy" src="https://pic.456766.xyz/typora/70e2335f30d0ac09481483ab161fd31c8ccdae7d.jpeg"></a></p>
 <p>然后在搜索框输入“xiaomi miot”，出来后点击它</p>
-<p><a href="#R-image-120bf2a3627be84433472e656324f0a6" class="lightbox-link"><img alt="image" class="noborder lazy lightbox noshadow figure-image" loading="lazy" src="https://pic.456766.xyz/typora/7dbb3b2832a340b7144704101831281b78997f9a.png" style=" height: auto; width: auto;"></a>
-<a href="javascript:history.back();" class="lightbox-back" id="R-image-120bf2a3627be84433472e656324f0a6"><img alt="image" class="noborder lazy lightbox noshadow lightbox-image" loading="lazy" src="https://pic.456766.xyz/typora/7dbb3b2832a340b7144704101831281b78997f9a.png"></a></p>
+<p><a href="#R-image-a5be498a00ef784a5b852d12d0354c34" class="lightbox-link"><img alt="image" class="noborder lazy lightbox noshadow figure-image" loading="lazy" src="https://pic.456766.xyz/typora/7dbb3b2832a340b7144704101831281b78997f9a.png" style=" height: auto; width: auto;"></a>
+<a href="javascript:history.back();" class="lightbox-back" id="R-image-a5be498a00ef784a5b852d12d0354c34"><img alt="image" class="noborder lazy lightbox noshadow lightbox-image" loading="lazy" src="https://pic.456766.xyz/typora/7dbb3b2832a340b7144704101831281b78997f9a.png"></a></p>
 <p>点击右下角DOWNLOAD进行下载</p>
-<p><a href="#R-image-2e97f2456f833c3e557d671ee9ad9a37" class="lightbox-link"><img alt="image" class="noborder lazy lightbox noshadow figure-image" loading="lazy" src="https://pic.456766.xyz/typora/c2e5a0057e07c7c71caa918194f809e2caa43ed4.png" style=" height: auto; width: auto;"></a>
-<a href="javascript:history.back();" class="lightbox-back" id="R-image-2e97f2456f833c3e557d671ee9ad9a37"><img alt="image" class="noborder lazy lightbox noshadow lightbox-image" loading="lazy" src="https://pic.456766.xyz/typora/c2e5a0057e07c7c71caa918194f809e2caa43ed4.png"></a></p>
-<p><a href="#R-image-cf2c8e873e8026bdb11073bddf6f23a1" class="lightbox-link"><img alt="image" class="noborder lazy lightbox noshadow figure-image" loading="lazy" src="https://pic.456766.xyz/typora/4052018b771c4df4176b353895c0596dcfb258a2.jpeg" style=" height: auto; width: auto;"></a>
-<a href="javascript:history.back();" class="lightbox-back" id="R-image-cf2c8e873e8026bdb11073bddf6f23a1"><img alt="image" class="noborder lazy lightbox noshadow lightbox-image" loading="lazy" src="https://pic.456766.xyz/typora/4052018b771c4df4176b353895c0596dcfb258a2.jpeg"></a></p>
+<p><a href="#R-image-cb661eb5c5c09979bdef5a9a685ca248" class="lightbox-link"><img alt="image" class="noborder lazy lightbox noshadow figure-image" loading="lazy" src="https://pic.456766.xyz/typora/c2e5a0057e07c7c71caa918194f809e2caa43ed4.png" style=" height: auto; width: auto;"></a>
+<a href="javascript:history.back();" class="lightbox-back" id="R-image-cb661eb5c5c09979bdef5a9a685ca248"><img alt="image" class="noborder lazy lightbox noshadow lightbox-image" loading="lazy" src="https://pic.456766.xyz/typora/c2e5a0057e07c7c71caa918194f809e2caa43ed4.png"></a></p>
+<p><a href="#R-image-45007840a479cd2cd38f93f0a90b5294" class="lightbox-link"><img alt="image" class="noborder lazy lightbox noshadow figure-image" loading="lazy" src="https://pic.456766.xyz/typora/4052018b771c4df4176b353895c0596dcfb258a2.jpeg" style=" height: auto; width: auto;"></a>
+<a href="javascript:history.back();" class="lightbox-back" id="R-image-45007840a479cd2cd38f93f0a90b5294"><img alt="image" class="noborder lazy lightbox noshadow lightbox-image" loading="lazy" src="https://pic.456766.xyz/typora/4052018b771c4df4176b353895c0596dcfb258a2.jpeg"></a></p>
 <p>安装完集成之后需要重启 HomeAssistant。
 配置 → 系统 右上角有重启按钮</p>
 <h3 id="2-配置-xiaomi-miot-atuo">2 配置 Xiaomi Miot Atuo</h3>
@@ -130,34 +130,34 @@
 <p>点击“设置”，选择“设备与服务”
 切换到 “设备” 选项卡， 然后点击右下角 “添加设备”
 然后输入“xiaomi”，然后选择&quot;Xiaomi Miot Auto&quot;</p>
-<p><a href="#R-image-722a597646f31aa99237102d940f69f5" class="lightbox-link"><img alt="image" class="noborder lazy lightbox noshadow figure-image" loading="lazy" src="https://pic.456766.xyz/typora/6522b231a80bf78d487a8fc545347c4b350d2730.jpeg" style=" height: auto; width: auto;"></a>
-<a href="javascript:history.back();" class="lightbox-back" id="R-image-722a597646f31aa99237102d940f69f5"><img alt="image" class="noborder lazy lightbox noshadow lightbox-image" loading="lazy" src="https://pic.456766.xyz/typora/6522b231a80bf78d487a8fc545347c4b350d2730.jpeg"></a></p>
+<p><a href="#R-image-131dff4ad93b5f7d3e878ca30a004849" class="lightbox-link"><img alt="image" class="noborder lazy lightbox noshadow figure-image" loading="lazy" src="https://pic.456766.xyz/typora/6522b231a80bf78d487a8fc545347c4b350d2730.jpeg" style=" height: auto; width: auto;"></a>
+<a href="javascript:history.back();" class="lightbox-back" id="R-image-131dff4ad93b5f7d3e878ca30a004849"><img alt="image" class="noborder lazy lightbox noshadow lightbox-image" loading="lazy" src="https://pic.456766.xyz/typora/6522b231a80bf78d487a8fc545347c4b350d2730.jpeg"></a></p>
 <p>选择“账号集成”，登录小米账号获取设备信息。</p>
-<p><a href="#R-image-5f60aa4ce5f96111daadff90648e2d03" class="lightbox-link"><img alt="image" class="noborder lazy lightbox noshadow figure-image" loading="lazy" src="https://pic.456766.xyz/typora/cd71249cb01282859a521a8a373a6e5629323f92.jpeg" style=" height: auto; width: auto;"></a>
-<a href="javascript:history.back();" class="lightbox-back" id="R-image-5f60aa4ce5f96111daadff90648e2d03"><img alt="image" class="noborder lazy lightbox noshadow lightbox-image" loading="lazy" src="https://pic.456766.xyz/typora/cd71249cb01282859a521a8a373a6e5629323f92.jpeg"></a></p>
-<p><a href="#R-image-130775e6fc2870c48b6bc52456741e04" class="lightbox-link"><img alt="image" class="noborder lazy lightbox noshadow figure-image" loading="lazy" src="https://pic.456766.xyz/typora/92f4e0e5a705997eb38b985073bb5c8fa47a881a.jpeg" style=" height: auto; width: auto;"></a>
-<a href="javascript:history.back();" class="lightbox-back" id="R-image-130775e6fc2870c48b6bc52456741e04"><img alt="image" class="noborder lazy lightbox noshadow lightbox-image" loading="lazy" src="https://pic.456766.xyz/typora/92f4e0e5a705997eb38b985073bb5c8fa47a881a.jpeg"></a></p>
+<p><a href="#R-image-2aa98a8a8552449ee683e4bb30b35bf3" class="lightbox-link"><img alt="image" class="noborder lazy lightbox noshadow figure-image" loading="lazy" src="https://pic.456766.xyz/typora/cd71249cb01282859a521a8a373a6e5629323f92.jpeg" style=" height: auto; width: auto;"></a>
+<a href="javascript:history.back();" class="lightbox-back" id="R-image-2aa98a8a8552449ee683e4bb30b35bf3"><img alt="image" class="noborder lazy lightbox noshadow lightbox-image" loading="lazy" src="https://pic.456766.xyz/typora/cd71249cb01282859a521a8a373a6e5629323f92.jpeg"></a></p>
+<p><a href="#R-image-679a3209fa162d8804549bd45b4b16bc" class="lightbox-link"><img alt="image" class="noborder lazy lightbox noshadow figure-image" loading="lazy" src="https://pic.456766.xyz/typora/92f4e0e5a705997eb38b985073bb5c8fa47a881a.jpeg" style=" height: auto; width: auto;"></a>
+<a href="javascript:history.back();" class="lightbox-back" id="R-image-679a3209fa162d8804549bd45b4b16bc"><img alt="image" class="noborder lazy lightbox noshadow lightbox-image" loading="lazy" src="https://pic.456766.xyz/typora/92f4e0e5a705997eb38b985073bb5c8fa47a881a.jpeg"></a></p>
 <p>按照配置指引完成剩余步骤，
 这里可以根据自身情况默认选择排除模式还是包含模式
 在设备列表中你想要接入 HomeAssistant 的设备。
 排除模式就是将设备列表中没有勾选色设备接入到Homeassistant
 包含模式就是将设备列表中已勾选的设备接入到Homeassistant</p>
-<p><a href="#R-image-01057ea154ead16f8899a5b2a33226c2" class="lightbox-link"><img alt="image" class="noborder lazy lightbox noshadow figure-image" loading="lazy" src="https://pic.456766.xyz/typora/c403c5c6840ffcc7de4c78bdedd16c2ade91c357.jpeg" style=" height: auto; width: auto;"></a>
-<a href="javascript:history.back();" class="lightbox-back" id="R-image-01057ea154ead16f8899a5b2a33226c2"><img alt="image" class="noborder lazy lightbox noshadow lightbox-image" loading="lazy" src="https://pic.456766.xyz/typora/c403c5c6840ffcc7de4c78bdedd16c2ade91c357.jpeg"></a></p>
+<p><a href="#R-image-02d3eeb7d6fcc10ed9ffdb21134c6afb" class="lightbox-link"><img alt="image" class="noborder lazy lightbox noshadow figure-image" loading="lazy" src="https://pic.456766.xyz/typora/c403c5c6840ffcc7de4c78bdedd16c2ade91c357.jpeg" style=" height: auto; width: auto;"></a>
+<a href="javascript:history.back();" class="lightbox-back" id="R-image-02d3eeb7d6fcc10ed9ffdb21134c6afb"><img alt="image" class="noborder lazy lightbox noshadow lightbox-image" loading="lazy" src="https://pic.456766.xyz/typora/c403c5c6840ffcc7de4c78bdedd16c2ade91c357.jpeg"></a></p>
 <p>接下来就是设置设备所在区域。这样就算是将米家智能设&gt; 备接入进来了。</p>
 <blockquote>
 <p>上面有一句话：如果想集成网关子设备，请直接选择子设备接入，只接入网关不会自动集成子设备。自己体会，至此就算接入完成了。</p>
 </blockquote>
 <p>回到概览，就可以看到我们刚才接入的设备了</p>
-<p><a href="#R-image-5a416ce6e345d0d175f9a63709f2864c" class="lightbox-link"><img alt="image" class="noborder lazy lightbox noshadow figure-image" loading="lazy" src="https://pic.456766.xyz/typora/55cbe342ce51cb278d4599e0061df76d510d5b0b.jpeg" style=" height: auto; width: auto;"></a>
-<a href="javascript:history.back();" class="lightbox-back" id="R-image-5a416ce6e345d0d175f9a63709f2864c"><img alt="image" class="noborder lazy lightbox noshadow lightbox-image" loading="lazy" src="https://pic.456766.xyz/typora/55cbe342ce51cb278d4599e0061df76d510d5b0b.jpeg"></a></p>
+<p><a href="#R-image-250fc358fb50a1c3787bedac4ac9862b" class="lightbox-link"><img alt="image" class="noborder lazy lightbox noshadow figure-image" loading="lazy" src="https://pic.456766.xyz/typora/55cbe342ce51cb278d4599e0061df76d510d5b0b.jpeg" style=" height: auto; width: auto;"></a>
+<a href="javascript:history.back();" class="lightbox-back" id="R-image-250fc358fb50a1c3787bedac4ac9862b"><img alt="image" class="noborder lazy lightbox noshadow lightbox-image" loading="lazy" src="https://pic.456766.xyz/typora/55cbe342ce51cb278d4599e0061df76d510d5b0b.jpeg"></a></p>
 <p>在配置 - 设备与服务中就能看到Xiaomi Miot Auto</p>
-<p><a href="#R-image-5c051cf89419d6a40bc0078fa088efb3" class="lightbox-link"><img alt="image" class="noborder lazy lightbox noshadow figure-image" loading="lazy" src="https://pic.456766.xyz/typora/ad4e3cd4220230604a9b3354a652d2566cc1a322.jpeg" style=" height: auto; width: auto;"></a>
-<a href="javascript:history.back();" class="lightbox-back" id="R-image-5c051cf89419d6a40bc0078fa088efb3"><img alt="image" class="noborder lazy lightbox noshadow lightbox-image" loading="lazy" src="https://pic.456766.xyz/typora/ad4e3cd4220230604a9b3354a652d2566cc1a322.jpeg"></a></p>
+<p><a href="#R-image-1fb68935488e1d89848b58645c0369c8" class="lightbox-link"><img alt="image" class="noborder lazy lightbox noshadow figure-image" loading="lazy" src="https://pic.456766.xyz/typora/ad4e3cd4220230604a9b3354a652d2566cc1a322.jpeg" style=" height: auto; width: auto;"></a>
+<a href="javascript:history.back();" class="lightbox-back" id="R-image-1fb68935488e1d89848b58645c0369c8"><img alt="image" class="noborder lazy lightbox noshadow lightbox-image" loading="lazy" src="https://pic.456766.xyz/typora/ad4e3cd4220230604a9b3354a652d2566cc1a322.jpeg"></a></p>
 <p>点进去就可以看到接入了多少个设备，多少个实体</p>
 <p>我们进入米家插座，就能看到很多信息，并且可以进行更丰富的控制和设置，更多高级的功能，期待你的发现和研究</p>
-<p><a href="#R-image-b61a42beda9b1195299ee1516d14d521" class="lightbox-link"><img alt="image" class="noborder lazy lightbox noshadow figure-image" loading="lazy" src="https://pic.456766.xyz/typora/103b0749a541718c1a75e8ecea1cb438338f0ee0.jpeg" style=" height: auto; width: auto;"></a>
-<a href="javascript:history.back();" class="lightbox-back" id="R-image-b61a42beda9b1195299ee1516d14d521"><img alt="image" class="noborder lazy lightbox noshadow lightbox-image" loading="lazy" src="https://pic.456766.xyz/typora/103b0749a541718c1a75e8ecea1cb438338f0ee0.jpeg"></a></p>
+<p><a href="#R-image-e0d561b688632e47167f14712629f7dc" class="lightbox-link"><img alt="image" class="noborder lazy lightbox noshadow figure-image" loading="lazy" src="https://pic.456766.xyz/typora/103b0749a541718c1a75e8ecea1cb438338f0ee0.jpeg" style=" height: auto; width: auto;"></a>
+<a href="javascript:history.back();" class="lightbox-back" id="R-image-e0d561b688632e47167f14712629f7dc"><img alt="image" class="noborder lazy lightbox noshadow lightbox-image" loading="lazy" src="https://pic.456766.xyz/typora/103b0749a541718c1a75e8ecea1cb438338f0ee0.jpeg"></a></p>
 
 <script
   id="utteranc"
@@ -190,11 +190,10 @@
         </div>
       </main>
     </div>
-    <script src="../../js/clipboard.min.js?1725802923" defer></script>
-    <script src="../../js/perfect-scrollbar.min.js?1725802923" defer></script>
-    <script src="../../js/theme.js?1725802923" defer></script>
-<script type="text/javascript" src="../../js/carousel.js"></script>
-<link rel="stylesheet" href="../../css/carousel.css">
+    <script src="../../js/clipboard.min.js?1725846757" defer></script>
+    <script src="../../js/perfect-scrollbar.min.js?1725846757" defer></script>
+    <script src="../../js/theme.js?1725846757" defer></script>
+
 
   </body>
 </html>
