--- a/public/access/homekit/index.print.html
+++ b/public/access/homekit/index.print.html
@@ -35,18 +35,18 @@
     <link href="http://localhost:1313/access/homekit/index.html" rel="canonical" type="text/html" title="HA Box桥接米家设备到HomeKit :: HaBox 技术支持站">
     <link href="../../access/homekit/index.xml" rel="alternate" type="application/rss+xml" title="HA Box桥接米家设备到HomeKit :: HaBox 技术支持站"><link rel="icon" href="../../images/favicon.png" type="image/png">
 
-    <link href="../../css/fontawesome-all.min.css?1725802923" rel="stylesheet" media="print" onload="this.media='all';this.onload=null;"><noscript><link href="../../css/fontawesome-all.min.css?1725802923" rel="stylesheet"></noscript>
-    <link href="../../css/nucleus.css?1725802923" rel="stylesheet">
-    <link href="../../css/auto-complete.css?1725802923" rel="stylesheet" media="print" onload="this.media='all';this.onload=null;"><noscript><link href="../../css/auto-complete.css?1725802923" rel="stylesheet"></noscript>
-    <link href="../../css/perfect-scrollbar.min.css?1725802923" rel="stylesheet">
-    <link href="../../css/fonts.css?1725802923" rel="stylesheet" media="print" onload="this.media='all';this.onload=null;"><noscript><link href="../../css/fonts.css?1725802923" rel="stylesheet"></noscript>
-    <link href="../../css/theme.css?1725802923" rel="stylesheet">
-    <link href="../../css/theme-relearn-auto.css?1725802923" rel="stylesheet" id="R-variant-style">
-    <link href="../../css/chroma-relearn-auto.css?1725802923" rel="stylesheet" id="R-variant-chroma-style">
-    <link href="../../css/variant.css?1725802923" rel="stylesheet">
-    <link href="../../css/print.css?1725802923" rel="stylesheet" media="print">
-    <link href="../../css/format-print.css?1725802923" rel="stylesheet">
-    <script src="../../js/variant.js?1725802923"></script>
+    <link href="../../css/fontawesome-all.min.css?1725846757" rel="stylesheet" media="print" onload="this.media='all';this.onload=null;"><noscript><link href="../../css/fontawesome-all.min.css?1725846757" rel="stylesheet"></noscript>
+    <link href="../../css/nucleus.css?1725846757" rel="stylesheet">
+    <link href="../../css/auto-complete.css?1725846757" rel="stylesheet" media="print" onload="this.media='all';this.onload=null;"><noscript><link href="../../css/auto-complete.css?1725846757" rel="stylesheet"></noscript>
+    <link href="../../css/perfect-scrollbar.min.css?1725846757" rel="stylesheet">
+    <link href="../../css/fonts.css?1725846757" rel="stylesheet" media="print" onload="this.media='all';this.onload=null;"><noscript><link href="../../css/fonts.css?1725846757" rel="stylesheet"></noscript>
+    <link href="../../css/theme.css?1725846757" rel="stylesheet">
+    <link href="../../css/theme-relearn-auto.css?1725846757" rel="stylesheet" id="R-variant-style">
+    <link href="../../css/chroma-relearn-auto.css?1725846757" rel="stylesheet" id="R-variant-chroma-style">
+    <link href="../../css/variant.css?1725846757" rel="stylesheet">
+    <link href="../../css/print.css?1725846757" rel="stylesheet" media="print">
+    <link href="../../css/format-print.css?1725846757" rel="stylesheet">
+    <script src="../../js/variant.js?1725846757"></script>
     <script>
       window.relearn = window.relearn || {};
       window.relearn.relBasePath='..\/..';
@@ -79,11 +79,11 @@
             </div>
           </div>
           <ol class="topbar-breadcrumbs breadcrumbs highlightable" itemscope itemtype="http://schema.org/BreadcrumbList"><li
-            itemscope itemtype="https://schema.org/ListItem" itemprop="itemListElement"><a itemprop="item" href="../../access/index.html"><span itemprop="name">设备接入</span></a><meta itemprop="position" content="1">&nbsp;>&nbsp;</li><li
+            itemscope itemtype="https://schema.org/ListItem" itemprop="itemListElement"><a itemprop="item" href="../../access/index.html"><span itemprop="name">2 设备接入</span></a><meta itemprop="position" content="1">&nbsp;>&nbsp;</li><li
             itemscope itemtype="https://schema.org/ListItem" itemprop="itemListElement"><span itemprop="name">HA Box桥接米家设备到HomeKit</span><meta itemprop="position" content="2"></li>
           </ol>
           <div class="topbar-area topbar-area-end" data-area="end">
-            <div class="topbar-button topbar-button-prev" data-content-empty="disable" data-width-s="show" data-width-m="show" data-width-l="show"><a class="topbar-control" href="../../access/index.html" title="设备接入 (🡐)"><i class="fa-fw fas fa-chevron-left"></i></a>
+            <div class="topbar-button topbar-button-prev" data-content-empty="disable" data-width-s="show" data-width-m="show" data-width-l="show"><a class="topbar-control" href="../../access/index.html" title="2 设备接入 (🡐)"><i class="fa-fw fas fa-chevron-left"></i></a>
             </div>
             <div class="topbar-button topbar-button-next" data-content-empty="disable" data-width-s="show" data-width-m="show" data-width-l="show"><a class="topbar-control" href="../../access/mijia/index.html" title="将米家设备接入HomeAssistant (🡒)"><i class="fa-fw fas fa-chevron-right"></i></a>
             </div>
@@ -114,27 +114,27 @@
 <p>接下来，我们通过 HomeKit Bridge 将 Home Assistant 中设备桥接到 HomeKit。</p>
 <p>首先，我们要添加 HomeKit Bridge 集成。点击“配置”，进入“设备与服务”页面。在“集成”选项下，点右下角“添加集成”
 然后输入“homekit” 或者&quot;apple&quot;</p>
-<p><a href="#R-image-6247319fbbc43244575f806ecb8b5131" class="lightbox-link"><img alt="image" class="noborder lazy lightbox noshadow figure-image" loading="lazy" src="https://pic.456766.xyz/typora/2405b767378b89b3a841ce13334d05cfc9061cf4.jpeg" style=" height: auto; width: auto;"></a>
-<a href="javascript:history.back();" class="lightbox-back" id="R-image-6247319fbbc43244575f806ecb8b5131"><img alt="image" class="noborder lazy lightbox noshadow lightbox-image" loading="lazy" src="https://pic.456766.xyz/typora/2405b767378b89b3a841ce13334d05cfc9061cf4.jpeg"></a></p>
+<p><a href="#R-image-c3a62e03ab7e27cc576f2f6c3447095d" class="lightbox-link"><img alt="image" class="noborder lazy lightbox noshadow figure-image" loading="lazy" src="https://pic.456766.xyz/typora/2405b767378b89b3a841ce13334d05cfc9061cf4.jpeg" style=" height: auto; width: auto;"></a>
+<a href="javascript:history.back();" class="lightbox-back" id="R-image-c3a62e03ab7e27cc576f2f6c3447095d"><img alt="image" class="noborder lazy lightbox noshadow lightbox-image" loading="lazy" src="https://pic.456766.xyz/typora/2405b767378b89b3a841ce13334d05cfc9061cf4.jpeg"></a></p>
 <p>点击“Apple”</p>
-<p><a href="#R-image-ec8a1f3c481db2e2b1b427c39aa63075" class="lightbox-link"><img alt="image" class="noborder lazy lightbox noshadow figure-image" loading="lazy" src="https://pic.456766.xyz/typora/a0787982f4a5381754deb552770fda923788b729.jpeg" style=" height: auto; width: auto;"></a>
-<a href="javascript:history.back();" class="lightbox-back" id="R-image-ec8a1f3c481db2e2b1b427c39aa63075"><img alt="image" class="noborder lazy lightbox noshadow lightbox-image" loading="lazy" src="https://pic.456766.xyz/typora/a0787982f4a5381754deb552770fda923788b729.jpeg"></a></p>
+<p><a href="#R-image-5a1cc77dbe321f595dd7e9e7023a1bd5" class="lightbox-link"><img alt="image" class="noborder lazy lightbox noshadow figure-image" loading="lazy" src="https://pic.456766.xyz/typora/a0787982f4a5381754deb552770fda923788b729.jpeg" style=" height: auto; width: auto;"></a>
+<a href="javascript:history.back();" class="lightbox-back" id="R-image-5a1cc77dbe321f595dd7e9e7023a1bd5"><img alt="image" class="noborder lazy lightbox noshadow lightbox-image" loading="lazy" src="https://pic.456766.xyz/typora/a0787982f4a5381754deb552770fda923788b729.jpeg"></a></p>
 <p>点击添加“HomeKit Bridge 集成”，按照指引完成添加。</p>
 <p>需要注意是的，如果你有温湿度传感器，点击“要添加的域”下拉选项，记得勾选“Sensor”，这个选项默认是不勾选的。</p>
-<p><a href="#R-image-117455517b5e2731b4331a7523d99868" class="lightbox-link"><img alt="image" class="noborder lazy lightbox noshadow figure-image" loading="lazy" src="https://pic.456766.xyz/typora/b7f3383a80e1a1f04f3b092af7b8d0054d1eaa2a.jpeg" style=" height: auto; width: auto;"></a>
-<a href="javascript:history.back();" class="lightbox-back" id="R-image-117455517b5e2731b4331a7523d99868"><img alt="image" class="noborder lazy lightbox noshadow lightbox-image" loading="lazy" src="https://pic.456766.xyz/typora/b7f3383a80e1a1f04f3b092af7b8d0054d1eaa2a.jpeg"></a></p>
+<p><a href="#R-image-e2a3a07a5d1f4890b81e10317f41ddbd" class="lightbox-link"><img alt="image" class="noborder lazy lightbox noshadow figure-image" loading="lazy" src="https://pic.456766.xyz/typora/b7f3383a80e1a1f04f3b092af7b8d0054d1eaa2a.jpeg" style=" height: auto; width: auto;"></a>
+<a href="javascript:history.back();" class="lightbox-back" id="R-image-e2a3a07a5d1f4890b81e10317f41ddbd"><img alt="image" class="noborder lazy lightbox noshadow lightbox-image" loading="lazy" src="https://pic.456766.xyz/typora/b7f3383a80e1a1f04f3b092af7b8d0054d1eaa2a.jpeg"></a></p>
 <p>添加 HomeKit Bridge 集成成功后，点击界面左下角的通知按钮。查看 homekit 的配对二维码。</p>
-<p><a href="#R-image-fb7f87e028f1e29fc18171530fc1b885" class="lightbox-link"><img alt="image" class="noborder lazy lightbox noshadow figure-image" loading="lazy" src="https://pic.456766.xyz/typora/b08589161582a58e794c2cb626c3ec44e2299ce0.jpeg" style=" height: auto; width: auto;"></a>
-<a href="javascript:history.back();" class="lightbox-back" id="R-image-fb7f87e028f1e29fc18171530fc1b885"><img alt="image" class="noborder lazy lightbox noshadow lightbox-image" loading="lazy" src="https://pic.456766.xyz/typora/b08589161582a58e794c2cb626c3ec44e2299ce0.jpeg"></a></p>
-<p><a href="#R-image-ce3b6a0589a8420c09ea5dba0ac01922" class="lightbox-link"><img alt="image" class="noborder lazy lightbox noshadow figure-image" loading="lazy" src="https://pic.456766.xyz/typora/3718c6668fa3b68c066162da84fe46579fd3c855.jpeg" style=" height: auto; width: auto;"></a>
-<a href="javascript:history.back();" class="lightbox-back" id="R-image-ce3b6a0589a8420c09ea5dba0ac01922"><img alt="image" class="noborder lazy lightbox noshadow lightbox-image" loading="lazy" src="https://pic.456766.xyz/typora/3718c6668fa3b68c066162da84fe46579fd3c855.jpeg"></a></p>
+<p><a href="#R-image-bd07bf2ee9202fe11d57e46fd8c1051a" class="lightbox-link"><img alt="image" class="noborder lazy lightbox noshadow figure-image" loading="lazy" src="https://pic.456766.xyz/typora/b08589161582a58e794c2cb626c3ec44e2299ce0.jpeg" style=" height: auto; width: auto;"></a>
+<a href="javascript:history.back();" class="lightbox-back" id="R-image-bd07bf2ee9202fe11d57e46fd8c1051a"><img alt="image" class="noborder lazy lightbox noshadow lightbox-image" loading="lazy" src="https://pic.456766.xyz/typora/b08589161582a58e794c2cb626c3ec44e2299ce0.jpeg"></a></p>
+<p><a href="#R-image-53825fa890d7483368788babe3cbe6f3" class="lightbox-link"><img alt="image" class="noborder lazy lightbox noshadow figure-image" loading="lazy" src="https://pic.456766.xyz/typora/3718c6668fa3b68c066162da84fe46579fd3c855.jpeg" style=" height: auto; width: auto;"></a>
+<a href="javascript:history.back();" class="lightbox-back" id="R-image-53825fa890d7483368788babe3cbe6f3"><img alt="image" class="noborder lazy lightbox noshadow lightbox-image" loading="lazy" src="https://pic.456766.xyz/typora/3718c6668fa3b68c066162da84fe46579fd3c855.jpeg"></a></p>
 <p>打开“家庭”应用，点击左上角的“+”号，选择“添加配件”。扫描上个步骤的得到的二维码，点击“添加到家庭”。在加入过程中，可能会提示“未认证设备”，点击“仍要添加”。然后完成剩余步骤，逐个添加设备。完成后，你就能能用Siri控制你的智能设备了。</p>
-<p><a href="#R-image-1fc2efb7c1f81e3a44c89115e28a2c26" class="lightbox-link"><img alt="桥接homekit6.png" class="noborder lazy lightbox noshadow figure-image" loading="lazy" src="https://pic.456766.xyz/typora/46651d4a69934aadba8c46c32b8d84a2ac6ce8ce.jpeg" style=" height: auto; width: auto;"></a>
-<a href="javascript:history.back();" class="lightbox-back" id="R-image-1fc2efb7c1f81e3a44c89115e28a2c26"><img alt="桥接homekit6.png" class="noborder lazy lightbox noshadow lightbox-image" loading="lazy" src="https://pic.456766.xyz/typora/46651d4a69934aadba8c46c32b8d84a2ac6ce8ce.jpeg"></a></p>
-<p><a href="#R-image-696e29ebe59adf54be5f8a6de6d8c0b8" class="lightbox-link"><img alt="桥接homekit7.png" class="noborder lazy lightbox noshadow figure-image" loading="lazy" src="https://pic.456766.xyz/typora/d9897e682d94ac340ab1a1aff6821f0dd09b2144.jpeg" style=" height: auto; width: auto;"></a>
-<a href="javascript:history.back();" class="lightbox-back" id="R-image-696e29ebe59adf54be5f8a6de6d8c0b8"><img alt="桥接homekit7.png" class="noborder lazy lightbox noshadow lightbox-image" loading="lazy" src="https://pic.456766.xyz/typora/d9897e682d94ac340ab1a1aff6821f0dd09b2144.jpeg"></a></p>
-<p><a href="#R-image-59ba2b856f6c1ba61457f817714790e9" class="lightbox-link"><img alt="桥接homekit8.png" class="noborder lazy lightbox noshadow figure-image" loading="lazy" src="https://pic.456766.xyz/typora/a07d8ff1e7af35d33193fdba56efa787ba360d89.jpeg" style=" height: auto; width: auto;"></a>
-<a href="javascript:history.back();" class="lightbox-back" id="R-image-59ba2b856f6c1ba61457f817714790e9"><img alt="桥接homekit8.png" class="noborder lazy lightbox noshadow lightbox-image" loading="lazy" src="https://pic.456766.xyz/typora/a07d8ff1e7af35d33193fdba56efa787ba360d89.jpeg"></a></p>
+<p><a href="#R-image-5096dfef9f6c2bd3eb53aa51fc03a4ea" class="lightbox-link"><img alt="桥接homekit6.png" class="noborder lazy lightbox noshadow figure-image" loading="lazy" src="https://pic.456766.xyz/typora/46651d4a69934aadba8c46c32b8d84a2ac6ce8ce.jpeg" style=" height: auto; width: auto;"></a>
+<a href="javascript:history.back();" class="lightbox-back" id="R-image-5096dfef9f6c2bd3eb53aa51fc03a4ea"><img alt="桥接homekit6.png" class="noborder lazy lightbox noshadow lightbox-image" loading="lazy" src="https://pic.456766.xyz/typora/46651d4a69934aadba8c46c32b8d84a2ac6ce8ce.jpeg"></a></p>
+<p><a href="#R-image-4bd7d181973fdce88bef34b8114481ed" class="lightbox-link"><img alt="桥接homekit7.png" class="noborder lazy lightbox noshadow figure-image" loading="lazy" src="https://pic.456766.xyz/typora/d9897e682d94ac340ab1a1aff6821f0dd09b2144.jpeg" style=" height: auto; width: auto;"></a>
+<a href="javascript:history.back();" class="lightbox-back" id="R-image-4bd7d181973fdce88bef34b8114481ed"><img alt="桥接homekit7.png" class="noborder lazy lightbox noshadow lightbox-image" loading="lazy" src="https://pic.456766.xyz/typora/d9897e682d94ac340ab1a1aff6821f0dd09b2144.jpeg"></a></p>
+<p><a href="#R-image-e40215ab1f27efb368b2ff26a86c6670" class="lightbox-link"><img alt="桥接homekit8.png" class="noborder lazy lightbox noshadow figure-image" loading="lazy" src="https://pic.456766.xyz/typora/a07d8ff1e7af35d33193fdba56efa787ba360d89.jpeg" style=" height: auto; width: auto;"></a>
+<a href="javascript:history.back();" class="lightbox-back" id="R-image-e40215ab1f27efb368b2ff26a86c6670"><img alt="桥接homekit8.png" class="noborder lazy lightbox noshadow lightbox-image" loading="lazy" src="https://pic.456766.xyz/typora/a07d8ff1e7af35d33193fdba56efa787ba360d89.jpeg"></a></p>
 <p>大功告成！</p>
 
 <script
@@ -168,11 +168,10 @@
         </div>
       </main>
     </div>
-    <script src="../../js/clipboard.min.js?1725802923" defer></script>
-    <script src="../../js/perfect-scrollbar.min.js?1725802923" defer></script>
-    <script src="../../js/theme.js?1725802923" defer></script>
-<script type="text/javascript" src="../../js/carousel.js"></script>
-<link rel="stylesheet" href="../../css/carousel.css">
+    <script src="../../js/clipboard.min.js?1725846757" defer></script>
+    <script src="../../js/perfect-scrollbar.min.js?1725846757" defer></script>
+    <script src="../../js/theme.js?1725846757" defer></script>
+
 
   </body>
 </html>
