--- a/public/access/index.html
+++ b/public/access/index.html
@@ -9,34 +9,34 @@
     <meta name="author" content="">
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:image" content="http://localhost:1313/images/hero.png">
-    <meta name="twitter:title" content="设备接入 :: HaBox 技术支持站">
+    <meta name="twitter:title" content="2 设备接入 :: HaBox 技术支持站">
     <meta name="twitter:description" content="Discover what this Hugo theme is all about and the core-concepts behind it.">
     <meta property="og:url" content="http://localhost:1313/access/index.html">
     <meta property="og:site_name" content="HaBox 技术支持站">
-    <meta property="og:title" content="设备接入 :: HaBox 技术支持站">
+    <meta property="og:title" content="2 设备接入 :: HaBox 技术支持站">
     <meta property="og:description" content="Discover what this Hugo theme is all about and the core-concepts behind it.">
     <meta property="og:locale" content="zh_cn">
     <meta property="og:type" content="website">
     <meta property="og:image" content="http://localhost:1313/images/hero.png">
-    <meta itemprop="name" content="设备接入 :: HaBox 技术支持站">
+    <meta itemprop="name" content="2 设备接入 :: HaBox 技术支持站">
     <meta itemprop="description" content="Discover what this Hugo theme is all about and the core-concepts behind it.">
     <meta itemprop="wordCount" content="13">
     <meta itemprop="image" content="http://localhost:1313/images/hero.png">
-    <title>设备接入 :: HaBox 技术支持站</title>
-    <link href="../access/index.xml" rel="alternate" type="application/rss+xml" title="设备接入 :: HaBox 技术支持站">
-    <link href="../access/index.print.html" rel="alternate" type="text/html" title="设备接入 :: HaBox 技术支持站"><link rel="icon" href="../images/favicon.png" type="image/png">
+    <title>2 设备接入 :: HaBox 技术支持站</title>
+    <link href="../access/index.xml" rel="alternate" type="application/rss+xml" title="2 设备接入 :: HaBox 技术支持站">
+    <link href="../access/index.print.html" rel="alternate" type="text/html" title="2 设备接入 :: HaBox 技术支持站"><link rel="icon" href="../images/favicon.png" type="image/png">
 
-    <link href="../css/fontawesome-all.min.css?1725845641" rel="stylesheet" media="print" onload="this.media='all';this.onload=null;"><noscript><link href="../css/fontawesome-all.min.css?1725845641" rel="stylesheet"></noscript>
-    <link href="../css/nucleus.css?1725845641" rel="stylesheet">
-    <link href="../css/auto-complete.css?1725845641" rel="stylesheet" media="print" onload="this.media='all';this.onload=null;"><noscript><link href="../css/auto-complete.css?1725845641" rel="stylesheet"></noscript>
-    <link href="../css/perfect-scrollbar.min.css?1725845641" rel="stylesheet">
-    <link href="../css/fonts.css?1725845641" rel="stylesheet" media="print" onload="this.media='all';this.onload=null;"><noscript><link href="../css/fonts.css?1725845641" rel="stylesheet"></noscript>
-    <link href="../css/theme.css?1725845641" rel="stylesheet">
-    <link href="../css/theme-relearn-auto.css?1725845641" rel="stylesheet" id="R-variant-style">
-    <link href="../css/chroma-relearn-auto.css?1725845641" rel="stylesheet" id="R-variant-chroma-style">
-    <link href="../css/variant.css?1725845641" rel="stylesheet">
-    <link href="../css/print.css?1725845641" rel="stylesheet" media="print">
-    <script src="../js/variant.js?1725845641"></script>
+    <link href="../css/fontawesome-all.min.css?1725846757" rel="stylesheet" media="print" onload="this.media='all';this.onload=null;"><noscript><link href="../css/fontawesome-all.min.css?1725846757" rel="stylesheet"></noscript>
+    <link href="../css/nucleus.css?1725846757" rel="stylesheet">
+    <link href="../css/auto-complete.css?1725846757" rel="stylesheet" media="print" onload="this.media='all';this.onload=null;"><noscript><link href="../css/auto-complete.css?1725846757" rel="stylesheet"></noscript>
+    <link href="../css/perfect-scrollbar.min.css?1725846757" rel="stylesheet">
+    <link href="../css/fonts.css?1725846757" rel="stylesheet" media="print" onload="this.media='all';this.onload=null;"><noscript><link href="../css/fonts.css?1725846757" rel="stylesheet"></noscript>
+    <link href="../css/theme.css?1725846757" rel="stylesheet">
+    <link href="../css/theme-relearn-auto.css?1725846757" rel="stylesheet" id="R-variant-style">
+    <link href="../css/chroma-relearn-auto.css?1725846757" rel="stylesheet" id="R-variant-chroma-style">
+    <link href="../css/variant.css?1725846757" rel="stylesheet">
+    <link href="../css/print.css?1725846757" rel="stylesheet" media="print">
+    <script src="../js/variant.js?1725846757"></script>
     <script>
       window.relearn = window.relearn || {};
       window.relearn.relBasePath='..';
@@ -75,14 +75,14 @@
             </div>
           </div>
           <ol class="topbar-breadcrumbs breadcrumbs highlightable" itemscope itemtype="http://schema.org/BreadcrumbList"><li
-            itemscope itemtype="https://schema.org/ListItem" itemprop="itemListElement"><span itemprop="name">设备接入</span><meta itemprop="position" content="1"></li>
+            itemscope itemtype="https://schema.org/ListItem" itemprop="itemListElement"><span itemprop="name">2 设备接入</span><meta itemprop="position" content="1"></li>
           </ol>
           <div class="topbar-area topbar-area-end" data-area="end">
             <div class="topbar-button topbar-button-edit" data-content-empty="disable" data-width-s="area-more" data-width-m="show" data-width-l="show"><a class="topbar-control" href="https://github.com/McShelby/hugo-theme-relearn/edit/main/exampleSite/content/access/_index.md" target="_self" title="编辑 (CTRL&#43;ALT&#43;w)"><i class="fa-fw fas fa-pen"></i></a>
             </div>
             <div class="topbar-button topbar-button-print" data-content-empty="disable" data-width-s="area-more" data-width-m="show" data-width-l="show"><a class="topbar-control" href="../access/index.print.html" title="打印整章 (CTRL&#43;ALT&#43;p)"><i class="fa-fw fas fa-print"></i></a>
             </div>
-            <div class="topbar-button topbar-button-prev" data-content-empty="disable" data-width-s="show" data-width-m="show" data-width-l="show"><a class="topbar-control" href="../box/index.html" title="关于HA盒子 (🡐)"><i class="fa-fw fas fa-chevron-left"></i></a>
+            <div class="topbar-button topbar-button-prev" data-content-empty="disable" data-width-s="show" data-width-m="show" data-width-l="show"><a class="topbar-control" href="../installation/hacs/index.html" title="HACS安装激活 (🡐)"><i class="fa-fw fas fa-chevron-left"></i></a>
             </div>
             <div class="topbar-button topbar-button-next" data-content-empty="disable" data-width-s="show" data-width-m="show" data-width-l="show"><a class="topbar-control" href="../access/homekit/index.html" title="HA Box桥接米家设备到HomeKit (🡒)"><i class="fa-fw fas fa-chevron-right"></i></a>
             </div>
@@ -106,7 +106,7 @@
             </header>
 <div class="article-subheading">第1章</div>
 
-<h1 id="设备接入">设备接入</h1>
+<h1 id="2-设备接入">2 设备接入</h1>
 
 <p>Discover what this Hugo theme is all about and the core-concepts behind it.</p>
 
@@ -204,13 +204,13 @@
         <script>
           var contentLangs=['en', 'zh'];
         </script>
-        <script src="../js/auto-complete.js?1725845641" defer></script>
-        <script src="../js/lunr/lunr.min.js?1725845641" defer></script>
-        <script src="../js/lunr/lunr.stemmer.support.min.js?1725845641" defer></script>
-        <script src="../js/lunr/lunr.multi.min.js?1725845641" defer></script>
-        <script src="../js/lunr/lunr.en.min.js?1725845641" defer></script>
-        <script src="../js/lunr/lunr.zh.min.js?1725845641" defer></script>
-        <script src="../js/search.js?1725845641" defer></script>
+        <script src="../js/auto-complete.js?1725846757" defer></script>
+        <script src="../js/lunr/lunr.min.js?1725846757" defer></script>
+        <script src="../js/lunr/lunr.stemmer.support.min.js?1725846757" defer></script>
+        <script src="../js/lunr/lunr.multi.min.js?1725846757" defer></script>
+        <script src="../js/lunr/lunr.en.min.js?1725846757" defer></script>
+        <script src="../js/lunr/lunr.zh.min.js?1725846757" defer></script>
+        <script src="../js/search.js?1725846757" defer></script>
       </div>
       <div id="R-homelinks" class="default-animation">
         <hr class="padding">
@@ -218,20 +218,22 @@
       <div id="R-content-wrapper" class="highlightable">
         <div id="R-topics">
           <ul class="enlarge morespace collapsible-menu">
-          <li data-nav-id="/installation/index.html" class=""><input type="checkbox" id="R-section-d532c08ef757367cd12653650690f4a3" aria-controls="R-subsections-d532c08ef757367cd12653650690f4a3"><label for="R-section-d532c08ef757367cd12653650690f4a3"><i class="fa-fw fas fa-chevron-down"></i><i class="fa-fw fas fa-chevron-right"></i><span class="a11y-only">子菜单安装维护</span></label><a class="padding" href="../installation/index.html">安装维护<i class="fa-fw fas fa-check read-icon"></i></a><ul id="R-subsections-d532c08ef757367cd12653650690f4a3" class="morespace collapsible-menu">
+          <li data-nav-id="/installation/index.html" class=""><input type="checkbox" id="R-section-d532c08ef757367cd12653650690f4a3" aria-controls="R-subsections-d532c08ef757367cd12653650690f4a3"><label for="R-section-d532c08ef757367cd12653650690f4a3"><i class="fa-fw fas fa-chevron-down"></i><i class="fa-fw fas fa-chevron-right"></i><span class="a11y-only">子菜单1 安装维护</span></label><a class="padding" href="../installation/index.html">1 安装维护<i class="fa-fw fas fa-check read-icon"></i></a><ul id="R-subsections-d532c08ef757367cd12653650690f4a3" class="morespace collapsible-menu">
           <li data-nav-id="/installation/instructions/index.html" class=""><a class="padding" href="../installation/instructions/index.html"> HA盒子使用说明书（开箱即用）<i class="fa-fw fas fa-check read-icon"></i></a></li>
           <li data-nav-id="/installation/wifi/index.html" class=""><a class="padding" href="../installation/wifi/index.html"> 给HA Box插上无线WIFI的翅膀<i class="fa-fw fas fa-check read-icon"></i></a></li>
           <li data-nav-id="/installation/hacs/index.html" class=""><a class="padding" href="../installation/hacs/index.html">HACS安装激活<i class="fa-fw fas fa-check read-icon"></i></a></li></ul></li>
-          <li data-nav-id="/box/index.html" class=""><a class="padding" href="../box/index.html">关于HA盒子<i class="fa-fw fas fa-check read-icon"></i></a></li>
-          <li data-nav-id="/access/index.html" class="active parent "><input type="checkbox" id="R-section-73540edfdcd333aefa95874c40791ad9" aria-controls="R-subsections-73540edfdcd333aefa95874c40791ad9" checked><label for="R-section-73540edfdcd333aefa95874c40791ad9"><i class="fa-fw fas fa-chevron-down"></i><i class="fa-fw fas fa-chevron-right"></i><span class="a11y-only">子菜单设备接入</span></label><a class="padding" href="../access/index.html">设备接入<i class="fa-fw fas fa-check read-icon"></i></a><ul id="R-subsections-73540edfdcd333aefa95874c40791ad9" class="morespace collapsible-menu">
+          <li data-nav-id="/access/index.html" class="active parent "><input type="checkbox" id="R-section-73540edfdcd333aefa95874c40791ad9" aria-controls="R-subsections-73540edfdcd333aefa95874c40791ad9" checked><label for="R-section-73540edfdcd333aefa95874c40791ad9"><i class="fa-fw fas fa-chevron-down"></i><i class="fa-fw fas fa-chevron-right"></i><span class="a11y-only">子菜单2 设备接入</span></label><a class="padding" href="../access/index.html">2 设备接入<i class="fa-fw fas fa-check read-icon"></i></a><ul id="R-subsections-73540edfdcd333aefa95874c40791ad9" class="morespace collapsible-menu">
           <li data-nav-id="/access/homekit/index.html" class=""><a class="padding" href="../access/homekit/index.html">HA Box桥接米家设备到HomeKit<i class="fa-fw fas fa-check read-icon"></i></a></li>
           <li data-nav-id="/access/mijia/index.html" class=""><a class="padding" href="../access/mijia/index.html">将米家设备接入HomeAssistant<i class="fa-fw fas fa-check read-icon"></i></a></li></ul></li>
-          <li data-nav-id="/network/index.html" class=""><input type="checkbox" id="R-section-45bc2156b004e8b8b20d1da2c598bd4d" aria-controls="R-subsections-45bc2156b004e8b8b20d1da2c598bd4d"><label for="R-section-45bc2156b004e8b8b20d1da2c598bd4d"><i class="fa-fw fas fa-chevron-down"></i><i class="fa-fw fas fa-chevron-right"></i><span class="a11y-only">子菜单网络技术</span></label><a class="padding" href="../network/index.html">网络技术<i class="fa-fw fas fa-check read-icon"></i></a><ul id="R-subsections-45bc2156b004e8b8b20d1da2c598bd4d" class="morespace collapsible-menu">
+          <li data-nav-id="/automatic-control/index.html" class=""><a class="padding" href="../automatic-control/index.html">3 智能控制<i class="fa-fw fas fa-check read-icon"></i></a></li>
+          <li data-nav-id="/network/index.html" class=""><input type="checkbox" id="R-section-45bc2156b004e8b8b20d1da2c598bd4d" aria-controls="R-subsections-45bc2156b004e8b8b20d1da2c598bd4d"><label for="R-section-45bc2156b004e8b8b20d1da2c598bd4d"><i class="fa-fw fas fa-chevron-down"></i><i class="fa-fw fas fa-chevron-right"></i><span class="a11y-only">子菜单4 网络技术</span></label><a class="padding" href="../network/index.html">4 网络技术<i class="fa-fw fas fa-check read-icon"></i></a><ul id="R-subsections-45bc2156b004e8b8b20d1da2c598bd4d" class="morespace collapsible-menu">
           <li data-nav-id="/network/habox-over-greatwall/index.html" class=""><a class="padding" href="../network/habox-over-greatwall/index.html">Ha盒子配置科学上网<i class="fa-fw fas fa-check read-icon"></i></a></li>
           <li data-nav-id="/network/linux-partition/index.html" class=""><a class="padding" href="../network/linux-partition/index.html">linux下无损扩容分区方法<i class="fa-fw fas fa-check read-icon"></i></a></li>
           <li data-nav-id="/network/docker-pull/index.html" class=""><a class="padding" href="../network/docker-pull/index.html">从 Docker Hub 快速拉取镜像<i class="fa-fw fas fa-check read-icon"></i></a></li>
           <li data-nav-id="/network/free-vless-node/index.html" class=""><a class="padding" href="../network/free-vless-node/index.html">搭建免费科学上网节点<i class="fa-fw fas fa-check read-icon"></i></a></li>
           <li data-nav-id="/network/free-remote-control/index.html" class=""><a class="padding" href="../network/free-remote-control/index.html">远程控制Homeassistant盒子<i class="fa-fw fas fa-check read-icon"></i></a></li></ul></li>
+          <li data-nav-id="/video/index.html" class=""><a class="padding" href="../video/index.html">5 视频教程<i class="fa-fw fas fa-check read-icon"></i></a></li>
+          <li data-nav-id="/about-box/index.html" class=""><a class="padding" href="../about-box/index.html">6 关于HA盒子<i class="fa-fw fas fa-check read-icon"></i></a></li>
           </ul>
         </div>
         <div class="padding footermargin footerLangSwitch footerVariantSwitch footerVisitedLinks footerFooter showVariantSwitch showVisitedLinks showFooter"></div>
@@ -302,9 +304,9 @@
       </div>
     </aside>
 
-    <script src="../js/clipboard.min.js?1725845641" defer></script>
-    <script src="../js/perfect-scrollbar.min.js?1725845641" defer></script>
-    <script src="../js/theme.js?1725845641" defer></script>
+    <script src="../js/clipboard.min.js?1725846757" defer></script>
+    <script src="../js/perfect-scrollbar.min.js?1725846757" defer></script>
+    <script src="../js/theme.js?1725846757" defer></script>
 
 
   </body>
