--- a/public/box/index.print.html
+++ b/public/box/index.print.html
@@ -11,41 +11,41 @@
     <meta name="author" content="">
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:image" content="http://localhost:1313/images/hero.png">
-    <meta name="twitter:title" content="关于HA盒子 :: HaBox 技术支持站">
+    <meta name="twitter:title" content="5 关于HA盒子 :: HaBox 技术支持站">
     <meta name="twitter:description" content="我们主要采用运营商盒子中的M401A、UNT403A、CM311-1A作为Homeassistant的承载体，可以说这是市场选择的结果：
 我们采用的HAOS镜像是冬瓜制作的，能够适配以上运营商电视盒子。而该镜像开始之支持以上三种盒子 运营商电视盒子因其出货量大，因此在二手市场性价比也很高，价格不会太高 晶晨S905l3A芯片，2&#43;16G的配置可以说刚刚好，能够满足大部分的需求，接入200&#43;设备不是问题 当然由于后期冬瓜的HAOS镜像可以适配了更多的盒子，导致市场价格进一步下降，屯了一些M401A和UNT403A，亏大了
 但是不得不说，以上这三种盒子依然是最合适的。闲鱼很多便宜的都是s905l3芯片，个人并不推荐，大家购买的时候要注意看是什么芯片。">
     <meta property="og:url" content="http://localhost:1313/box/index.html">
     <meta property="og:site_name" content="HaBox 技术支持站">
-    <meta property="og:title" content="关于HA盒子 :: HaBox 技术支持站">
+    <meta property="og:title" content="5 关于HA盒子 :: HaBox 技术支持站">
     <meta property="og:description" content="我们主要采用运营商盒子中的M401A、UNT403A、CM311-1A作为Homeassistant的承载体，可以说这是市场选择的结果：
 我们采用的HAOS镜像是冬瓜制作的，能够适配以上运营商电视盒子。而该镜像开始之支持以上三种盒子 运营商电视盒子因其出货量大，因此在二手市场性价比也很高，价格不会太高 晶晨S905l3A芯片，2&#43;16G的配置可以说刚刚好，能够满足大部分的需求，接入200&#43;设备不是问题 当然由于后期冬瓜的HAOS镜像可以适配了更多的盒子，导致市场价格进一步下降，屯了一些M401A和UNT403A，亏大了
 但是不得不说，以上这三种盒子依然是最合适的。闲鱼很多便宜的都是s905l3芯片，个人并不推荐，大家购买的时候要注意看是什么芯片。">
     <meta property="og:locale" content="zh_cn">
     <meta property="og:type" content="website">
     <meta property="og:image" content="http://localhost:1313/images/hero.png">
-    <meta itemprop="name" content="关于HA盒子 :: HaBox 技术支持站">
+    <meta itemprop="name" content="5 关于HA盒子 :: HaBox 技术支持站">
     <meta itemprop="description" content="我们主要采用运营商盒子中的M401A、UNT403A、CM311-1A作为Homeassistant的承载体，可以说这是市场选择的结果：
 我们采用的HAOS镜像是冬瓜制作的，能够适配以上运营商电视盒子。而该镜像开始之支持以上三种盒子 运营商电视盒子因其出货量大，因此在二手市场性价比也很高，价格不会太高 晶晨S905l3A芯片，2&#43;16G的配置可以说刚刚好，能够满足大部分的需求，接入200&#43;设备不是问题 当然由于后期冬瓜的HAOS镜像可以适配了更多的盒子，导致市场价格进一步下降，屯了一些M401A和UNT403A，亏大了
 但是不得不说，以上这三种盒子依然是最合适的。闲鱼很多便宜的都是s905l3芯片，个人并不推荐，大家购买的时候要注意看是什么芯片。">
     <meta itemprop="wordCount" content="278">
     <meta itemprop="image" content="http://localhost:1313/images/hero.png">
-    <title>关于HA盒子 :: HaBox 技术支持站</title>
-    <link href="http://localhost:1313/box/index.html" rel="canonical" type="text/html" title="关于HA盒子 :: HaBox 技术支持站">
-    <link href="../box/index.xml" rel="alternate" type="application/rss+xml" title="关于HA盒子 :: HaBox 技术支持站"><link rel="icon" href="../images/favicon.png" type="image/png">
+    <title>5 关于HA盒子 :: HaBox 技术支持站</title>
+    <link href="http://localhost:1313/box/index.html" rel="canonical" type="text/html" title="5 关于HA盒子 :: HaBox 技术支持站">
+    <link href="../box/index.xml" rel="alternate" type="application/rss+xml" title="5 关于HA盒子 :: HaBox 技术支持站"><link rel="icon" href="../images/favicon.png" type="image/png">
 
-    <link href="../css/fontawesome-all.min.css?1725845705" rel="stylesheet" media="print" onload="this.media='all';this.onload=null;"><noscript><link href="../css/fontawesome-all.min.css?1725845705" rel="stylesheet"></noscript>
-    <link href="../css/nucleus.css?1725845705" rel="stylesheet">
-    <link href="../css/auto-complete.css?1725845705" rel="stylesheet" media="print" onload="this.media='all';this.onload=null;"><noscript><link href="../css/auto-complete.css?1725845705" rel="stylesheet"></noscript>
-    <link href="../css/perfect-scrollbar.min.css?1725845705" rel="stylesheet">
-    <link href="../css/fonts.css?1725845705" rel="stylesheet" media="print" onload="this.media='all';this.onload=null;"><noscript><link href="../css/fonts.css?1725845705" rel="stylesheet"></noscript>
-    <link href="../css/theme.css?1725845705" rel="stylesheet">
-    <link href="../css/theme-relearn-auto.css?1725845705" rel="stylesheet" id="R-variant-style">
-    <link href="../css/chroma-relearn-auto.css?1725845705" rel="stylesheet" id="R-variant-chroma-style">
-    <link href="../css/variant.css?1725845705" rel="stylesheet">
-    <link href="../css/print.css?1725845705" rel="stylesheet" media="print">
-    <link href="../css/format-print.css?1725845705" rel="stylesheet">
-    <script src="../js/variant.js?1725845705"></script>
+    <link href="../css/fontawesome-all.min.css?1725846710" rel="stylesheet" media="print" onload="this.media='all';this.onload=null;"><noscript><link href="../css/fontawesome-all.min.css?1725846710" rel="stylesheet"></noscript>
+    <link href="../css/nucleus.css?1725846710" rel="stylesheet">
+    <link href="../css/auto-complete.css?1725846710" rel="stylesheet" media="print" onload="this.media='all';this.onload=null;"><noscript><link href="../css/auto-complete.css?1725846710" rel="stylesheet"></noscript>
+    <link href="../css/perfect-scrollbar.min.css?1725846710" rel="stylesheet">
+    <link href="../css/fonts.css?1725846710" rel="stylesheet" media="print" onload="this.media='all';this.onload=null;"><noscript><link href="../css/fonts.css?1725846710" rel="stylesheet"></noscript>
+    <link href="../css/theme.css?1725846710" rel="stylesheet">
+    <link href="../css/theme-relearn-auto.css?1725846710" rel="stylesheet" id="R-variant-style">
+    <link href="../css/chroma-relearn-auto.css?1725846710" rel="stylesheet" id="R-variant-chroma-style">
+    <link href="../css/variant.css?1725846710" rel="stylesheet">
+    <link href="../css/print.css?1725846710" rel="stylesheet" media="print">
+    <link href="../css/format-print.css?1725846710" rel="stylesheet">
+    <script src="../js/variant.js?1725846710"></script>
     <script>
       window.relearn = window.relearn || {};
       window.relearn.relBasePath='..';
@@ -78,12 +78,12 @@
             </div>
           </div>
           <ol class="topbar-breadcrumbs breadcrumbs highlightable" itemscope itemtype="http://schema.org/BreadcrumbList"><li
-            itemscope itemtype="https://schema.org/ListItem" itemprop="itemListElement"><span itemprop="name">关于HA盒子</span><meta itemprop="position" content="1"></li>
+            itemscope itemtype="https://schema.org/ListItem" itemprop="itemListElement"><span itemprop="name">5 关于HA盒子</span><meta itemprop="position" content="1"></li>
           </ol>
           <div class="topbar-area topbar-area-end" data-area="end">
-            <div class="topbar-button topbar-button-prev" data-content-empty="disable" data-width-s="show" data-width-m="show" data-width-l="show"><a class="topbar-control" href="../installation/hacs/index.html" title="HACS安装激活 (🡐)"><i class="fa-fw fas fa-chevron-left"></i></a>
+            <div class="topbar-button topbar-button-prev" data-content-empty="disable" data-width-s="show" data-width-m="show" data-width-l="show"><a class="topbar-control" href="../network/free-remote-control/index.html" title="远程控制Homeassistant盒子 (🡐)"><i class="fa-fw fas fa-chevron-left"></i></a>
             </div>
-            <div class="topbar-button topbar-button-next" data-content-empty="disable" data-width-s="show" data-width-m="show" data-width-l="show"><a class="topbar-control" href="../access/index.html" title="设备接入 (🡒)"><i class="fa-fw fas fa-chevron-right"></i></a>
+            <div class="topbar-button topbar-button-next" data-content-empty="disable" data-width-s="show" data-width-m="show" data-width-l="show"><a class="topbar-control" href="../video/index.html" title="5 视频教程 (🡒)"><i class="fa-fw fas fa-chevron-right"></i></a>
             </div>
           </div>
         </div>
@@ -97,7 +97,7 @@
             </header>
 <div class="article-subheading">第1章</div>
 
-<h1 id="关于ha盒子">关于HA盒子</h1>
+<h1 id="5-关于ha盒子">5 关于HA盒子</h1>
 
 <p>我们主要采用运营商盒子中的M401A、UNT403A、CM311-1A作为Homeassistant的承载体，可以说这是市场选择的结果：</p>
 <ol>
@@ -108,8 +108,8 @@
 <p>当然由于后期冬瓜的HAOS镜像可以适配了更多的盒子，导致市场价格进一步下降，屯了一些M401A和UNT403A，亏大了</p>
 <p>但是不得不说，以上这三种盒子依然是最合适的。闲鱼很多便宜的都是s905l3芯片，个人并不推荐，大家购买的时候要注意看是什么芯片。</p>
 <p>先看看大家容易混淆的s905l3和s905l3a芯片的对比</p>
-<p><a href="#R-image-23e9eac64cd713e456e14ff9cb684332" class="lightbox-link"><img alt="image-20240908214739930" class="noborder lazy lightbox noshadow figure-image" loading="lazy" src="https://pic.456766.xyz/typora/image-20240908214739930.png" style=" height: auto; width: auto;"></a>
-<a href="javascript:history.back();" class="lightbox-back" id="R-image-23e9eac64cd713e456e14ff9cb684332"><img alt="image-20240908214739930" class="noborder lazy lightbox noshadow lightbox-image" loading="lazy" src="https://pic.456766.xyz/typora/image-20240908214739930.png"></a></p>
+<p><a href="#R-image-d4823f9c4ec1f1d7da02de0e6dae5925" class="lightbox-link"><img alt="image-20240908214739930" class="noborder lazy lightbox noshadow figure-image" loading="lazy" src="https://pic.456766.xyz/typora/image-20240908214739930.png" style=" height: auto; width: auto;"></a>
+<a href="javascript:history.back();" class="lightbox-back" id="R-image-d4823f9c4ec1f1d7da02de0e6dae5925"><img alt="image-20240908214739930" class="noborder lazy lightbox noshadow lightbox-image" loading="lazy" src="https://pic.456766.xyz/typora/image-20240908214739930.png"></a></p>
 <h2 id="specification-comparison">Specification comparison:</h2>
 <table>
   <thead>
@@ -324,16 +324,16 @@
 </table>
 <p>详细的对比数据，请访问 <a href="https://gadgetversus.com/processor/amlogic-s905l3-vs-amlogic-s905l3a/" rel="external" target="_self">https://gadgetversus.com/processor/amlogic-s905l3-vs-amlogic-s905l3a/</a></p>
 <p>下面是M401A的几张图片</p>
-<p><a href="#R-image-63eb9f3715cecace837d20865a9a4b69" class="lightbox-link"><img class="noborder lazy lightbox noshadow figure-image" loading="lazy" src="https://pic.456766.xyz/202409072117187.png" style=" height: auto; width: auto;"></a>
-<a href="javascript:history.back();" class="lightbox-back" id="R-image-63eb9f3715cecace837d20865a9a4b69"><img class="noborder lazy lightbox noshadow lightbox-image" loading="lazy" src="https://pic.456766.xyz/202409072117187.png"></a></p>
-<p><a href="#R-image-aeefc26dc15360823637ddb4cff74c0a" class="lightbox-link"><img class="noborder lazy lightbox noshadow figure-image" loading="lazy" src="https://pic.456766.xyz/202409072117451.png" style=" height: auto; width: auto;"></a>
-<a href="javascript:history.back();" class="lightbox-back" id="R-image-aeefc26dc15360823637ddb4cff74c0a"><img class="noborder lazy lightbox noshadow lightbox-image" loading="lazy" src="https://pic.456766.xyz/202409072117451.png"></a></p>
-<p><a href="#R-image-c5386cfceec6bac807c54602f7cb50c8" class="lightbox-link"><img class="noborder lazy lightbox noshadow figure-image" loading="lazy" src="https://pic.456766.xyz/202409072118487.png" style=" height: auto; width: auto;"></a>
-<a href="javascript:history.back();" class="lightbox-back" id="R-image-c5386cfceec6bac807c54602f7cb50c8"><img class="noborder lazy lightbox noshadow lightbox-image" loading="lazy" src="https://pic.456766.xyz/202409072118487.png"></a></p>
-<p><a href="#R-image-5711467f7734f67230b6afa9566adab5" class="lightbox-link"><img class="noborder lazy lightbox noshadow figure-image" loading="lazy" src="https://pic.456766.xyz/202409072119320.png" style=" height: auto; width: auto;"></a>
-<a href="javascript:history.back();" class="lightbox-back" id="R-image-5711467f7734f67230b6afa9566adab5"><img class="noborder lazy lightbox noshadow lightbox-image" loading="lazy" src="https://pic.456766.xyz/202409072119320.png"></a></p>
-<p><a href="#R-image-4310719cc0e690e6c529f64e8a34ee83" class="lightbox-link"><img class="noborder lazy lightbox noshadow figure-image" loading="lazy" src="https://pic.456766.xyz/202409072119549.png" style=" height: auto; width: auto;"></a>
-<a href="javascript:history.back();" class="lightbox-back" id="R-image-4310719cc0e690e6c529f64e8a34ee83"><img class="noborder lazy lightbox noshadow lightbox-image" loading="lazy" src="https://pic.456766.xyz/202409072119549.png"></a></p>
+<p><a href="#R-image-12e25e802820fe15a5031cfca4aec3e7" class="lightbox-link"><img class="noborder lazy lightbox noshadow figure-image" loading="lazy" src="https://pic.456766.xyz/202409072117187.png" style=" height: auto; width: auto;"></a>
+<a href="javascript:history.back();" class="lightbox-back" id="R-image-12e25e802820fe15a5031cfca4aec3e7"><img class="noborder lazy lightbox noshadow lightbox-image" loading="lazy" src="https://pic.456766.xyz/202409072117187.png"></a></p>
+<p><a href="#R-image-61ccafc4536bb9cb9f7f3f9177127065" class="lightbox-link"><img class="noborder lazy lightbox noshadow figure-image" loading="lazy" src="https://pic.456766.xyz/202409072117451.png" style=" height: auto; width: auto;"></a>
+<a href="javascript:history.back();" class="lightbox-back" id="R-image-61ccafc4536bb9cb9f7f3f9177127065"><img class="noborder lazy lightbox noshadow lightbox-image" loading="lazy" src="https://pic.456766.xyz/202409072117451.png"></a></p>
+<p><a href="#R-image-a5a8f91098c89a4b238816e0c499c79c" class="lightbox-link"><img class="noborder lazy lightbox noshadow figure-image" loading="lazy" src="https://pic.456766.xyz/202409072118487.png" style=" height: auto; width: auto;"></a>
+<a href="javascript:history.back();" class="lightbox-back" id="R-image-a5a8f91098c89a4b238816e0c499c79c"><img class="noborder lazy lightbox noshadow lightbox-image" loading="lazy" src="https://pic.456766.xyz/202409072118487.png"></a></p>
+<p><a href="#R-image-f03562e86f417d813ebec03a08ceac70" class="lightbox-link"><img class="noborder lazy lightbox noshadow figure-image" loading="lazy" src="https://pic.456766.xyz/202409072119320.png" style=" height: auto; width: auto;"></a>
+<a href="javascript:history.back();" class="lightbox-back" id="R-image-f03562e86f417d813ebec03a08ceac70"><img class="noborder lazy lightbox noshadow lightbox-image" loading="lazy" src="https://pic.456766.xyz/202409072119320.png"></a></p>
+<p><a href="#R-image-71f2f4814b599e617eb297ff9da6307a" class="lightbox-link"><img class="noborder lazy lightbox noshadow figure-image" loading="lazy" src="https://pic.456766.xyz/202409072119549.png" style=" height: auto; width: auto;"></a>
+<a href="javascript:history.back();" class="lightbox-back" id="R-image-71f2f4814b599e617eb297ff9da6307a"><img class="noborder lazy lightbox noshadow lightbox-image" loading="lazy" src="https://pic.456766.xyz/202409072119549.png"></a></p>
 <p>偶尔也出黑豹X2（panther x2）和x96max+，但是量很少，就不作介绍了，有兴趣的同学自行bing（嗯，不用百度很多年了，世界变得清净了不少）</p>
 
 <script
@@ -367,9 +367,9 @@
         </div>
       </main>
     </div>
-    <script src="../js/clipboard.min.js?1725845705" defer></script>
-    <script src="../js/perfect-scrollbar.min.js?1725845705" defer></script>
-    <script src="../js/theme.js?1725845705" defer></script>
+    <script src="../js/clipboard.min.js?1725846710" defer></script>
+    <script src="../js/perfect-scrollbar.min.js?1725846710" defer></script>
+    <script src="../js/theme.js?1725846710" defer></script>
 
 
   </body>
