--- a/public/about-box/index.print.html
+++ b/public/about-box/index.print.html
@@ -28,24 +28,24 @@
     <meta itemprop="description" content="我们主要采用运营商盒子中的M401A、UNT403A、CM311-1A作为Homeassistant的承载体，可以说这是市场选择的结果：
 我们采用的HAOS镜像是冬瓜制作的，能够适配以上运营商电视盒子。而该镜像开始之支持以上三种盒子 运营商电视盒子因其出货量大，因此在二手市场性价比也很高，价格不会太高 晶晨S905l3A芯片，2&#43;16G的配置可以说刚刚好，能够满足大部分的需求，接入200&#43;设备不是问题 当然由于后期冬瓜的HAOS镜像可以适配了更多的盒子，导致市场价格进一步下降，屯了一些M401A和UNT403A，亏大了
 但是不得不说，以上这三种盒子依然是最合适的。闲鱼很多便宜的都是s905l3芯片，个人并不推荐，大家购买的时候要注意看是什么芯片。">
-    <meta itemprop="wordCount" content="278">
+    <meta itemprop="wordCount" content="296">
     <meta itemprop="image" content="http://localhost:1313/images/hero.png">
     <title>6 关于HA盒子 :: HaBox 技术支持站</title>
     <link href="http://localhost:1313/about-box/index.html" rel="canonical" type="text/html" title="6 关于HA盒子 :: HaBox 技术支持站">
     <link href="../about-box/index.xml" rel="alternate" type="application/rss+xml" title="6 关于HA盒子 :: HaBox 技术支持站"><link rel="icon" href="../images/favicon.png" type="image/png">
 
-    <link href="../css/fontawesome-all.min.css?1725846757" rel="stylesheet" media="print" onload="this.media='all';this.onload=null;"><noscript><link href="../css/fontawesome-all.min.css?1725846757" rel="stylesheet"></noscript>
-    <link href="../css/nucleus.css?1725846757" rel="stylesheet">
-    <link href="../css/auto-complete.css?1725846757" rel="stylesheet" media="print" onload="this.media='all';this.onload=null;"><noscript><link href="../css/auto-complete.css?1725846757" rel="stylesheet"></noscript>
-    <link href="../css/perfect-scrollbar.min.css?1725846757" rel="stylesheet">
-    <link href="../css/fonts.css?1725846757" rel="stylesheet" media="print" onload="this.media='all';this.onload=null;"><noscript><link href="../css/fonts.css?1725846757" rel="stylesheet"></noscript>
-    <link href="../css/theme.css?1725846757" rel="stylesheet">
-    <link href="../css/theme-relearn-auto.css?1725846757" rel="stylesheet" id="R-variant-style">
-    <link href="../css/chroma-relearn-auto.css?1725846757" rel="stylesheet" id="R-variant-chroma-style">
-    <link href="../css/variant.css?1725846757" rel="stylesheet">
-    <link href="../css/print.css?1725846757" rel="stylesheet" media="print">
-    <link href="../css/format-print.css?1725846757" rel="stylesheet">
-    <script src="../js/variant.js?1725846757"></script>
+    <link href="../css/fontawesome-all.min.css?1726041520" rel="stylesheet" media="print" onload="this.media='all';this.onload=null;"><noscript><link href="../css/fontawesome-all.min.css?1726041520" rel="stylesheet"></noscript>
+    <link href="../css/nucleus.css?1726041520" rel="stylesheet">
+    <link href="../css/auto-complete.css?1726041520" rel="stylesheet" media="print" onload="this.media='all';this.onload=null;"><noscript><link href="../css/auto-complete.css?1726041520" rel="stylesheet"></noscript>
+    <link href="../css/perfect-scrollbar.min.css?1726041520" rel="stylesheet">
+    <link href="../css/fonts.css?1726041520" rel="stylesheet" media="print" onload="this.media='all';this.onload=null;"><noscript><link href="../css/fonts.css?1726041520" rel="stylesheet"></noscript>
+    <link href="../css/theme.css?1726041520" rel="stylesheet">
+    <link href="../css/theme-relearn-auto.css?1726041520" rel="stylesheet" id="R-variant-style">
+    <link href="../css/chroma-relearn-auto.css?1726041520" rel="stylesheet" id="R-variant-chroma-style">
+    <link href="../css/variant.css?1726041520" rel="stylesheet">
+    <link href="../css/print.css?1726041520" rel="stylesheet" media="print">
+    <link href="../css/format-print.css?1726041520" rel="stylesheet">
+    <script src="../js/variant.js?1726041520"></script>
     <script>
       window.relearn = window.relearn || {};
       window.relearn.relBasePath='..';
@@ -108,8 +108,8 @@
 <p>当然由于后期冬瓜的HAOS镜像可以适配了更多的盒子，导致市场价格进一步下降，屯了一些M401A和UNT403A，亏大了</p>
 <p>但是不得不说，以上这三种盒子依然是最合适的。闲鱼很多便宜的都是s905l3芯片，个人并不推荐，大家购买的时候要注意看是什么芯片。</p>
 <p>先看看大家容易混淆的s905l3和s905l3a芯片的对比</p>
-<p><a href="#R-image-9e2226476c52074412c796c5c0d05727" class="lightbox-link"><img alt="image-20240908214739930" class="noborder lazy lightbox noshadow figure-image" loading="lazy" src="https://pic.456766.xyz/typora/image-20240908214739930.png" style=" height: auto; width: auto;"></a>
-<a href="javascript:history.back();" class="lightbox-back" id="R-image-9e2226476c52074412c796c5c0d05727"><img alt="image-20240908214739930" class="noborder lazy lightbox noshadow lightbox-image" loading="lazy" src="https://pic.456766.xyz/typora/image-20240908214739930.png"></a></p>
+<p><a href="#R-image-988eb2ba45e1106473e88182ea808270" class="lightbox-link"><img alt="image-20240908214739930" class="noborder lazy lightbox noshadow figure-image" loading="lazy" src="https://pic.456766.xyz/typora/image-20240908214739930.png" style=" height: auto; width: auto;"></a>
+<a href="javascript:history.back();" class="lightbox-back" id="R-image-988eb2ba45e1106473e88182ea808270"><img alt="image-20240908214739930" class="noborder lazy lightbox noshadow lightbox-image" loading="lazy" src="https://pic.456766.xyz/typora/image-20240908214739930.png"></a></p>
 <h2 id="specification-comparison">Specification comparison:</h2>
 <table>
   <thead>
@@ -324,17 +324,41 @@
 </table>
 <p>详细的对比数据，请访问 <a href="https://gadgetversus.com/processor/amlogic-s905l3-vs-amlogic-s905l3a/" rel="external" target="_self">https://gadgetversus.com/processor/amlogic-s905l3-vs-amlogic-s905l3a/</a></p>
 <p>下面是M401A的几张图片</p>
-<p><a href="#R-image-bd45f98ee3d91ddc3a59359b1c06fd41" class="lightbox-link"><img class="noborder lazy lightbox noshadow figure-image" loading="lazy" src="https://pic.456766.xyz/202409072117187.png" style=" height: auto; width: auto;"></a>
-<a href="javascript:history.back();" class="lightbox-back" id="R-image-bd45f98ee3d91ddc3a59359b1c06fd41"><img class="noborder lazy lightbox noshadow lightbox-image" loading="lazy" src="https://pic.456766.xyz/202409072117187.png"></a></p>
-<p><a href="#R-image-cdcbdc8b8f890d42de568a64276a9298" class="lightbox-link"><img class="noborder lazy lightbox noshadow figure-image" loading="lazy" src="https://pic.456766.xyz/202409072117451.png" style=" height: auto; width: auto;"></a>
-<a href="javascript:history.back();" class="lightbox-back" id="R-image-cdcbdc8b8f890d42de568a64276a9298"><img class="noborder lazy lightbox noshadow lightbox-image" loading="lazy" src="https://pic.456766.xyz/202409072117451.png"></a></p>
-<p><a href="#R-image-4ab3ec43f9375172c488b4482bdbbddc" class="lightbox-link"><img class="noborder lazy lightbox noshadow figure-image" loading="lazy" src="https://pic.456766.xyz/202409072118487.png" style=" height: auto; width: auto;"></a>
-<a href="javascript:history.back();" class="lightbox-back" id="R-image-4ab3ec43f9375172c488b4482bdbbddc"><img class="noborder lazy lightbox noshadow lightbox-image" loading="lazy" src="https://pic.456766.xyz/202409072118487.png"></a></p>
-<p><a href="#R-image-70b1598e53048b6b1466e1e20b30760a" class="lightbox-link"><img class="noborder lazy lightbox noshadow figure-image" loading="lazy" src="https://pic.456766.xyz/202409072119320.png" style=" height: auto; width: auto;"></a>
-<a href="javascript:history.back();" class="lightbox-back" id="R-image-70b1598e53048b6b1466e1e20b30760a"><img class="noborder lazy lightbox noshadow lightbox-image" loading="lazy" src="https://pic.456766.xyz/202409072119320.png"></a></p>
-<p><a href="#R-image-5e31350d2783021b33e0e9329dbc4afe" class="lightbox-link"><img class="noborder lazy lightbox noshadow figure-image" loading="lazy" src="https://pic.456766.xyz/202409072119549.png" style=" height: auto; width: auto;"></a>
-<a href="javascript:history.back();" class="lightbox-back" id="R-image-5e31350d2783021b33e0e9329dbc4afe"><img class="noborder lazy lightbox noshadow lightbox-image" loading="lazy" src="https://pic.456766.xyz/202409072119549.png"></a></p>
+<p><a href="#R-image-0e0c23345bffab25dd0c7fd1240c155f" class="lightbox-link"><img class="noborder lazy lightbox noshadow figure-image" loading="lazy" src="https://pic.456766.xyz/202409072117187.png" style=" height: auto; width: auto;"></a>
+<a href="javascript:history.back();" class="lightbox-back" id="R-image-0e0c23345bffab25dd0c7fd1240c155f"><img class="noborder lazy lightbox noshadow lightbox-image" loading="lazy" src="https://pic.456766.xyz/202409072117187.png"></a></p>
+<p><a href="#R-image-85983dbc216a8e8343f50e42de0693b2" class="lightbox-link"><img class="noborder lazy lightbox noshadow figure-image" loading="lazy" src="https://pic.456766.xyz/202409072117451.png" style=" height: auto; width: auto;"></a>
+<a href="javascript:history.back();" class="lightbox-back" id="R-image-85983dbc216a8e8343f50e42de0693b2"><img class="noborder lazy lightbox noshadow lightbox-image" loading="lazy" src="https://pic.456766.xyz/202409072117451.png"></a></p>
+<p><a href="#R-image-fd8644e896430d8cbab827bb620944f6" class="lightbox-link"><img class="noborder lazy lightbox noshadow figure-image" loading="lazy" src="https://pic.456766.xyz/202409072118487.png" style=" height: auto; width: auto;"></a>
+<a href="javascript:history.back();" class="lightbox-back" id="R-image-fd8644e896430d8cbab827bb620944f6"><img class="noborder lazy lightbox noshadow lightbox-image" loading="lazy" src="https://pic.456766.xyz/202409072118487.png"></a></p>
+<p><a href="#R-image-d433f232bef7cf8a0d681d4217f1d557" class="lightbox-link"><img class="noborder lazy lightbox noshadow figure-image" loading="lazy" src="https://pic.456766.xyz/202409072119320.png" style=" height: auto; width: auto;"></a>
+<a href="javascript:history.back();" class="lightbox-back" id="R-image-d433f232bef7cf8a0d681d4217f1d557"><img class="noborder lazy lightbox noshadow lightbox-image" loading="lazy" src="https://pic.456766.xyz/202409072119320.png"></a></p>
+<p><a href="#R-image-fd659cbe8b46df837619792408d4eb9b" class="lightbox-link"><img class="noborder lazy lightbox noshadow figure-image" loading="lazy" src="https://pic.456766.xyz/202409072119549.png" style=" height: auto; width: auto;"></a>
+<a href="javascript:history.back();" class="lightbox-back" id="R-image-fd659cbe8b46df837619792408d4eb9b"><img class="noborder lazy lightbox noshadow lightbox-image" loading="lazy" src="https://pic.456766.xyz/202409072119549.png"></a></p>
 <p>偶尔也出黑豹X2（panther x2）和x96max+，但是量很少，就不作介绍了，有兴趣的同学自行bing（嗯，不用百度很多年了，世界变得清净了不少）</p>
+<ul>
+<li>安装维护
+<ul>
+<li><a href="https://www.ha-box.xyz/installation/instructions/index.html" rel="external" target="_self"> HA盒子使用说明书（开箱即用）</a></li>
+<li><a href="https://www.ha-box.xyz/installation/wifi/index.html" rel="external" target="_self"> 给HA Box插上无线WIFI的翅膀</a></li>
+<li><a href="https://www.ha-box.xyz/installation/hacs/index.html" rel="external" target="_self">HACS安装激活</a></li>
+</ul>
+</li>
+<li>设备接入
+<ul>
+<li><a href="https://www.ha-box.xyz/access/homekit/index.html" rel="external" target="_self">HA Box桥接米家设备到HomeKit</a></li>
+<li><a href="https://www.ha-box.xyz/access/mijia/index.html" rel="external" target="_self">将米家设备接入HomeAssistant</a></li>
+</ul>
+</li>
+<li>网络技术
+<ul>
+<li><a href="https://www.ha-box.xyz/network/habox-over-greatwall/index.html" rel="external" target="_self">Ha盒子配置科学上网</a></li>
+<li><a href="https://www.ha-box.xyz/network/linux-partition/index.html" rel="external" target="_self">linux下无损扩容分区方法</a></li>
+<li><a href="https://www.ha-box.xyz/network/docker-pull/index.html" rel="external" target="_self">从 Docker Hub 快速拉取镜像</a></li>
+<li><a href="https://www.ha-box.xyz/network/free-vless-node/index.html" rel="external" target="_self">搭建免费科学上网节点</a></li>
+<li><a href="https://www.ha-box.xyz/network/free-remote-control/index.html" rel="external" target="_self">远程控制Homeassistant盒子</a></li>
+</ul>
+</li>
+</ul>
 
 <script
   id="utteranc"
@@ -367,9 +391,9 @@
         </div>
       </main>
     </div>
-    <script src="../js/clipboard.min.js?1725846757" defer></script>
-    <script src="../js/perfect-scrollbar.min.js?1725846757" defer></script>
-    <script src="../js/theme.js?1725846757" defer></script>
+    <script src="../js/clipboard.min.js?1726041520" defer></script>
+    <script src="../js/perfect-scrollbar.min.js?1726041520" defer></script>
+    <script src="../js/theme.js?1726041520" defer></script>
 
 
   </body>
