--- a/public/installation/index.html
+++ b/public/installation/index.html
@@ -26,17 +26,17 @@
     <link href="../installation/index.xml" rel="alternate" type="application/rss+xml" title="1 安装维护 :: HaBox 技术支持站">
     <link href="../installation/index.print.html" rel="alternate" type="text/html" title="1 安装维护 :: HaBox 技术支持站"><link rel="icon" href="../images/favicon.png" type="image/png">
 
-    <link href="../css/fontawesome-all.min.css?1725846757" rel="stylesheet" media="print" onload="this.media='all';this.onload=null;"><noscript><link href="../css/fontawesome-all.min.css?1725846757" rel="stylesheet"></noscript>
-    <link href="../css/nucleus.css?1725846757" rel="stylesheet">
-    <link href="../css/auto-complete.css?1725846757" rel="stylesheet" media="print" onload="this.media='all';this.onload=null;"><noscript><link href="../css/auto-complete.css?1725846757" rel="stylesheet"></noscript>
-    <link href="../css/perfect-scrollbar.min.css?1725846757" rel="stylesheet">
-    <link href="../css/fonts.css?1725846757" rel="stylesheet" media="print" onload="this.media='all';this.onload=null;"><noscript><link href="../css/fonts.css?1725846757" rel="stylesheet"></noscript>
-    <link href="../css/theme.css?1725846757" rel="stylesheet">
-    <link href="../css/theme-relearn-auto.css?1725846757" rel="stylesheet" id="R-variant-style">
-    <link href="../css/chroma-relearn-auto.css?1725846757" rel="stylesheet" id="R-variant-chroma-style">
-    <link href="../css/variant.css?1725846757" rel="stylesheet">
-    <link href="../css/print.css?1725846757" rel="stylesheet" media="print">
-    <script src="../js/variant.js?1725846757"></script>
+    <link href="../css/fontawesome-all.min.css?1726041606" rel="stylesheet" media="print" onload="this.media='all';this.onload=null;"><noscript><link href="../css/fontawesome-all.min.css?1726041606" rel="stylesheet"></noscript>
+    <link href="../css/nucleus.css?1726041606" rel="stylesheet">
+    <link href="../css/auto-complete.css?1726041606" rel="stylesheet" media="print" onload="this.media='all';this.onload=null;"><noscript><link href="../css/auto-complete.css?1726041606" rel="stylesheet"></noscript>
+    <link href="../css/perfect-scrollbar.min.css?1726041606" rel="stylesheet">
+    <link href="../css/fonts.css?1726041606" rel="stylesheet" media="print" onload="this.media='all';this.onload=null;"><noscript><link href="../css/fonts.css?1726041606" rel="stylesheet"></noscript>
+    <link href="../css/theme.css?1726041606" rel="stylesheet">
+    <link href="../css/theme-relearn-auto.css?1726041606" rel="stylesheet" id="R-variant-style">
+    <link href="../css/chroma-relearn-auto.css?1726041606" rel="stylesheet" id="R-variant-chroma-style">
+    <link href="../css/variant.css?1726041606" rel="stylesheet">
+    <link href="../css/print.css?1726041606" rel="stylesheet" media="print">
+    <script src="../js/variant.js?1726041606"></script>
     <script>
       window.relearn = window.relearn || {};
       window.relearn.relBasePath='..';
@@ -82,7 +82,7 @@
             </div>
             <div class="topbar-button topbar-button-print" data-content-empty="disable" data-width-s="area-more" data-width-m="show" data-width-l="show"><a class="topbar-control" href="../installation/index.print.html" title="打印整章 (CTRL&#43;ALT&#43;p)"><i class="fa-fw fas fa-print"></i></a>
             </div>
-            <div class="topbar-button topbar-button-prev" data-content-empty="disable" data-width-s="show" data-width-m="show" data-width-l="show"><a class="topbar-control" href="../index.html" title="Ha-Box技术支持站 (🡐)"><i class="fa-fw fas fa-chevron-left"></i></a>
+            <div class="topbar-button topbar-button-prev" data-content-empty="disable" data-width-s="show" data-width-m="show" data-width-l="show"><a class="topbar-control" href="../index.html" title="Homeassistant盒子介绍 (🡐)"><i class="fa-fw fas fa-chevron-left"></i></a>
             </div>
             <div class="topbar-button topbar-button-next" data-content-empty="disable" data-width-s="show" data-width-m="show" data-width-l="show"><a class="topbar-control" href="../installation/instructions/index.html" title="HA盒子使用说明书（开箱即用） (🡒)"><i class="fa-fw fas fa-chevron-right"></i></a>
             </div>
@@ -204,13 +204,13 @@
         <script>
           var contentLangs=['en', 'zh'];
         </script>
-        <script src="../js/auto-complete.js?1725846757" defer></script>
-        <script src="../js/lunr/lunr.min.js?1725846757" defer></script>
-        <script src="../js/lunr/lunr.stemmer.support.min.js?1725846757" defer></script>
-        <script src="../js/lunr/lunr.multi.min.js?1725846757" defer></script>
-        <script src="../js/lunr/lunr.en.min.js?1725846757" defer></script>
-        <script src="../js/lunr/lunr.zh.min.js?1725846757" defer></script>
-        <script src="../js/search.js?1725846757" defer></script>
+        <script src="../js/auto-complete.js?1726041606" defer></script>
+        <script src="../js/lunr/lunr.min.js?1726041606" defer></script>
+        <script src="../js/lunr/lunr.stemmer.support.min.js?1726041606" defer></script>
+        <script src="../js/lunr/lunr.multi.min.js?1726041606" defer></script>
+        <script src="../js/lunr/lunr.en.min.js?1726041606" defer></script>
+        <script src="../js/lunr/lunr.zh.min.js?1726041606" defer></script>
+        <script src="../js/search.js?1726041606" defer></script>
       </div>
       <div id="R-homelinks" class="default-animation">
         <hr class="padding">
@@ -233,7 +233,6 @@
           <li data-nav-id="/network/free-vless-node/index.html" class=""><a class="padding" href="../network/free-vless-node/index.html">搭建免费科学上网节点<i class="fa-fw fas fa-check read-icon"></i></a></li>
           <li data-nav-id="/network/free-remote-control/index.html" class=""><a class="padding" href="../network/free-remote-control/index.html">远程控制Homeassistant盒子<i class="fa-fw fas fa-check read-icon"></i></a></li></ul></li>
           <li data-nav-id="/video/index.html" class=""><a class="padding" href="../video/index.html">5 视频教程<i class="fa-fw fas fa-check read-icon"></i></a></li>
-          <li data-nav-id="/about-box/index.html" class=""><a class="padding" href="../about-box/index.html">6 关于HA盒子<i class="fa-fw fas fa-check read-icon"></i></a></li>
           </ul>
         </div>
         <div class="padding footermargin footerLangSwitch footerVariantSwitch footerVisitedLinks footerFooter showVariantSwitch showVisitedLinks showFooter"></div>
@@ -304,9 +303,9 @@
       </div>
     </aside>
 
-    <script src="../js/clipboard.min.js?1725846757" defer></script>
-    <script src="../js/perfect-scrollbar.min.js?1725846757" defer></script>
-    <script src="../js/theme.js?1725846757" defer></script>
+    <script src="../js/clipboard.min.js?1726041606" defer></script>
+    <script src="../js/perfect-scrollbar.min.js?1726041606" defer></script>
+    <script src="../js/theme.js?1726041606" defer></script>
 
 
   </body>
